--- a/httpry_agent.conf
+++ b/httpry_agent.conf
@@ -27,7 +27,7 @@ set HOSTNAME nscc-toll
 set NET_GROUP Toll
 
 # INVERT MATCHNG
-# Only process the domains listed in httpry_agent.excludes
+# Only process the domains listed in httpry_agent.excludes (as opposed to excluding them)
 # 1=yes 0=no
 
 set INVERT_MATCH 0
