--- a/httpry_agent.conf
+++ b/httpry_agent.conf
@@ -1,5 +1,5 @@
 #
-# Configuration file for url_agent.tcl
+# Configuration file for httpry_agent.tcl
 #
 
 # DEBUG is VERY chatty. Use it only when needed.
