--- a/httpry_agent.conf
+++ b/httpry_agent.conf
@@ -18,12 +18,9 @@ set SERVER_PORT 7736
 
 # Local hostname - that means this machines name
 # Note: Sensors monitoring multiple interfaces need to use a unique 'hostname'
-#       for each interface. Make sure this name is the same in the respective
-#       log_packets.sh
 set HOSTNAME nscc-toll
 
-# The net id is used to correlate data from different agents. This number should match
-# the number of the pcap_agent.
+# The net id is used to correlate data from different agents.
 set NET_GROUP Toll
 
 # INVERT MATCHNG
@@ -36,4 +33,3 @@ set INVERT_MATCH 0
 # 1=yes 0=no
 
 set EMPTY_HOST 1
-
