--- a/http_agent.conf.sample
+++ b/http_agent.conf.sample
@@ -1,5 +1,5 @@
 #
-# Configuration file for httpry_agent.tcl
+# Configuration file for http_agent.tcl
 #
 
 # DEBUG is VERY chatty. Use it only when needed.
@@ -11,17 +11,17 @@ set DEBUG 1
 set DAEMON 0
 
 # Name of sguild server
-set SERVER_HOST 127.0.0.1
+set SERVER_HOST localhost
 
 # Port sguild listens on for sensor connects
 set SERVER_PORT 7736
 
 # Local hostname - that means this machines name
 # Note: Sensors monitoring multiple interfaces need to use a unique 'hostname'
-set HOSTNAME nscc-toll
+set HOSTNAME url-01
 
 # The net id is used to correlate data from different agents.
-set NET_GROUP Toll
+set NET_GROUP Canada
 
 # INVERT MATCHNG
 # Only process the domains listed in httpry_agent.excludes (as opposed to excluding them)
@@ -33,3 +33,9 @@ set INVERT_MATCH 0
 # 1=yes 0=no
 
 set EMPTY_HOST 1
+
+# LOG_FORMAT
+# Httpry and Suricata's output formats are supported
+# httpry or suricata
+
+set LOG_FORMAT suricata
